--- a/Lectures/L3_data_visualization/L3_data_visualization.html
+++ b/Lectures/L3_data_visualization/L3_data_visualization.html
@@ -19,6 +19,11 @@
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"a4249cf2737d435e974933e2cbf56e02","expires":14}</script>
+    <script src="libs/himalaya/himalaya.js"></script>
+    <script src="libs/js-cookie/js.cookie.js"></script>
+    <link href="libs/editable/editable.css" rel="stylesheet" />
+    <script src="libs/editable/editable.js"></script>
     <link rel="stylesheet" href="../xaringan-themer.css" type="text/css" />
     <link rel="stylesheet" href="../slides.css" type="text/css" />
   </head>
@@ -68,14 +73,14 @@ starwars
 
 ```
 ## # A tibble: 87 x 14
-##   name  height  mass hair_color skin_color eye_color birth_year
-##   &lt;chr&gt;  &lt;int&gt; &lt;dbl&gt; &lt;chr&gt;      &lt;chr&gt;      &lt;chr&gt;          &lt;dbl&gt;
-## 1 Luke…    172    77 blond      fair       blue            19  
-## 2 C-3PO    167    75 &lt;NA&gt;       gold       yellow         112  
-## 3 R2-D2     96    32 &lt;NA&gt;       white, bl… red             33  
-## 4 Dart…    202   136 none       white      yellow          41.9
-## 5 Leia…    150    49 brown      light      brown           19  
-## 6 Owen…    178   120 brown, gr… light      blue            52  
+##   name    height  mass hair_color skin_color eye_color birth_year
+##   &lt;chr&gt;    &lt;int&gt; &lt;dbl&gt; &lt;chr&gt;      &lt;chr&gt;      &lt;chr&gt;          &lt;dbl&gt;
+## 1 Luke S…    172    77 blond      fair       blue            19  
+## 2 C-3PO      167    75 &lt;NA&gt;       gold       yellow         112  
+## 3 R2-D2       96    32 &lt;NA&gt;       white, bl… red             33  
+## 4 Darth …    202   136 none       white      yellow          41.9
+## 5 Leia O…    150    49 brown      light      brown           19  
+## 6 Owen L…    178   120 brown, gr… light      blue            52  
 ## # … with 81 more rows, and 7 more variables: sex &lt;chr&gt;,
 ## #   gender &lt;chr&gt;, homeworld &lt;chr&gt;, species &lt;chr&gt;, films &lt;list&gt;,
 ## #   vehicles &lt;list&gt;, starships &lt;list&gt;
@@ -103,20 +108,20 @@ glimpse(starwars)
 ```
 ## Rows: 87
 ## Columns: 14
-## $ name       &lt;chr&gt; "Luke Skywalker", "C-3PO", "R2-D2", "Darth …
-## $ height     &lt;int&gt; 172, 167, 96, 202, 150, 178, 165, 97, 183, …
-## $ mass       &lt;dbl&gt; 77.0, 75.0, 32.0, 136.0, 49.0, 120.0, 75.0,…
-## $ hair_color &lt;chr&gt; "blond", NA, NA, "none", "brown", "brown, g…
-## $ skin_color &lt;chr&gt; "fair", "gold", "white, blue", "white", "li…
-## $ eye_color  &lt;chr&gt; "blue", "yellow", "red", "yellow", "brown",…
-## $ birth_year &lt;dbl&gt; 19.0, 112.0, 33.0, 41.9, 19.0, 52.0, 47.0, …
-## $ sex        &lt;chr&gt; "male", "none", "none", "male", "female", "…
-## $ gender     &lt;chr&gt; "masculine", "masculine", "masculine", "mas…
-## $ homeworld  &lt;chr&gt; "Tatooine", "Tatooine", "Naboo", "Tatooine"…
-## $ species    &lt;chr&gt; "Human", "Droid", "Droid", "Human", "Human"…
-## $ films      &lt;list&gt; [&lt;"The Empire Strikes Back", "Revenge of t…
-## $ vehicles   &lt;list&gt; [&lt;"Snowspeeder", "Imperial Speeder Bike"&gt;,…
-## $ starships  &lt;list&gt; [&lt;"X-wing", "Imperial shuttle"&gt;, &lt;&gt;, &lt;&gt;, "…
+## $ name       &lt;chr&gt; "Luke Skywalker", "C-3PO", "R2-D2", "Darth V…
+## $ height     &lt;int&gt; 172, 167, 96, 202, 150, 178, 165, 97, 183, 1…
+## $ mass       &lt;dbl&gt; 77.0, 75.0, 32.0, 136.0, 49.0, 120.0, 75.0, …
+## $ hair_color &lt;chr&gt; "blond", NA, NA, "none", "brown", "brown, gr…
+## $ skin_color &lt;chr&gt; "fair", "gold", "white, blue", "white", "lig…
+## $ eye_color  &lt;chr&gt; "blue", "yellow", "red", "yellow", "brown", …
+## $ birth_year &lt;dbl&gt; 19.0, 112.0, 33.0, 41.9, 19.0, 52.0, 47.0, N…
+## $ sex        &lt;chr&gt; "male", "none", "none", "male", "female", "m…
+## $ gender     &lt;chr&gt; "masculine", "masculine", "masculine", "masc…
+## $ homeworld  &lt;chr&gt; "Tatooine", "Tatooine", "Naboo", "Tatooine",…
+## $ species    &lt;chr&gt; "Human", "Droid", "Droid", "Human", "Human",…
+## $ films      &lt;list&gt; &lt;"The Empire Strikes Back", "Revenge of the…
+## $ vehicles   &lt;list&gt; &lt;"Snowspeeder", "Imperial Speeder Bike"&gt;, &lt;…
+## $ starships  &lt;list&gt; &lt;"X-wing", "Imperial shuttle"&gt;, &lt;&gt;, &lt;&gt;, "TI…
 ```
 
 ---
@@ -405,7 +410,7 @@ quartet %&gt;%
 ```
 ## # A tibble: 4 x 6
 ##   set   mean_x mean_y  sd_x  sd_y     r
-## * &lt;fct&gt;  &lt;dbl&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
+##   &lt;fct&gt;  &lt;dbl&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
 ## 1 I          9   7.50  3.32  2.03 0.816
 ## 2 II         9   7.50  3.32  2.03 0.816
 ## 3 III        9   7.5   3.32  2.03 0.816
@@ -465,14 +470,14 @@ glimpse(penguins)
 ```
 ## Rows: 344
 ## Columns: 8
-## $ species           &lt;fct&gt; Adelie, Adelie, Adelie, Adelie, Adel…
-## $ island            &lt;fct&gt; Torgersen, Torgersen, Torgersen, Tor…
-## $ bill_length_mm    &lt;dbl&gt; 39.1, 39.5, 40.3, NA, 36.7, 39.3, 38…
-## $ bill_depth_mm     &lt;dbl&gt; 18.7, 17.4, 18.0, NA, 19.3, 20.6, 17…
-## $ flipper_length_mm &lt;int&gt; 181, 186, 195, NA, 193, 190, 181, 19…
-## $ body_mass_g       &lt;int&gt; 3750, 3800, 3250, NA, 3450, 3650, 36…
-## $ sex               &lt;fct&gt; male, female, female, NA, female, ma…
-## $ year              &lt;int&gt; 2007, 2007, 2007, 2007, 2007, 2007, …
+## $ species           &lt;fct&gt; Adelie, Adelie, Adelie, Adelie, Adeli…
+## $ island            &lt;fct&gt; Torgersen, Torgersen, Torgersen, Torg…
+## $ bill_length_mm    &lt;dbl&gt; 39.1, 39.5, 40.3, NA, 36.7, 39.3, 38.…
+## $ bill_depth_mm     &lt;dbl&gt; 18.7, 17.4, 18.0, NA, 19.3, 20.6, 17.…
+## $ flipper_length_mm &lt;int&gt; 181, 186, 195, NA, 193, 190, 181, 195…
+## $ body_mass_g       &lt;int&gt; 3750, 3800, 3250, NA, 3450, 3650, 362…
+## $ sex               &lt;fct&gt; male, female, female, NA, female, mal…
+## $ year              &lt;int&gt; 2007, 2007, 2007, 2007, 2007, 2007, 2…
 ```
 ]
 
@@ -782,14 +787,14 @@ ggplot(data = penguins,
 ggplot(data = penguins,
        mapping = aes(x = bill_depth_mm,
                      y = bill_length_mm,
-                     color = species)) +
-  geom_point() +
+*                    fill = species)) +
+* geom_point(color="black",shape=21) +
   labs(title = "Bill depth and length",
        subtitle = "Dimensions for Adelie, Chinstrap, and Gentoo Penguins",
        x = "Bill depth (mm)", y = "Bill length (mm)",
        color = "Species",
        caption = "Source: Palmer Station LTER / palmerpenguins package") +
-* scale_color_viridis_d()
+* scale_fill_viridis_d()
 ```
 ]
 .pull-right[
@@ -809,14 +814,14 @@ ggplot(data = penguins,
 ggplot(data = penguins,
        mapping = aes(x = bill_depth_mm,
                      y = bill_length_mm,
-                     color = species)) +
-  geom_point() +
+*                    fill = species)) +
+* geom_point(color="black",shape=21) +
   labs(title = "Bill depth and length",
        subtitle = "Dimensions for Adelie, Chinstrap, and Gentoo Penguins",
        x = "Bill depth (mm)", y = "Bill length (mm)",
        color = "Species",
        caption = "Source: Palmer Station LTER / palmerpenguins package") +
-  scale_color_viridis_d()
+* scale_fill_viridis_d()
 ```
 
 ```
